// to generate: npm install -g protoc-gen-js 
//protoc --js_out=import_style=commonjs,binary:. .\auth-service.proto
syntax = "proto3";

message AuthRequest {
    string token = 1;
    string role = 2;
}

message AuthResponse {
    bool valid = 1;
    string userId = 2;
    string companyId = 3;
    string email = 4;
}

service AuthService {
    rpc IsValid (AuthRequest) returns (AuthResponse);
}